Refactor workflow system

--- a/src/content/h1/tools/hek/tool/page.yml
+++ b/src/content/h1/tools/hek/tool/page.yml
@@ -5,6 +5,8 @@ imgCaption:
   en: '`tool structure` being used to compile a JMS'
 keywords:
   en:
+    - tool
+    - "h1"
     - lightmap
     - radiosity
     - cli
