--- a/src/content/h1/source-data/jms/page.yml
+++ b/src/content/h1/source-data/jms/page.yml
@@ -1,7 +1,7 @@
 title:
   en: JMS
 stub: true
-workflowName: jms
+workflowName: JMS
 img: rigged-cyborg.jpg
 imgCaption:
   en: JMS files contain model geometry, material assignments, and skeleton data.
