--- a/src/content/h1/tools/aether/page.yml
+++ b/src/content/h1/tools/aether/page.yml
@@ -1,6 +1,9 @@
 title:
   en: Aether
 img: aether.png
+related:
+  - /h1/tools/hek/tool/lm_tool
+  - /h1/tags/scenario_structure_bsp/lightmaps
 imgCaption:
   en: |
     Timberland's [BSP][scenario_structure_bsp] and [scenery][] extracted
