--- a/src/content/general/source-data/fbx/page.yml
+++ b/src/content/general/source-data/fbx/page.yml
@@ -1,11 +1,13 @@
 title:
-  en: Using FBX in H1A
+  en: Using FBX in MCC
 keywords:
   en:
     - FBX
     - Model
     - Animation
-workflowName: fbx-h1a
+workflowName: fbx-mcc
 stub: true
 related:
   - /h1/tools/h1a-ek/h1a-tool
+  - /h2/tools/h2-ek/h2-tool
+  - /h3/tools/h3-ek/h3-tool
