--- a/src/content/general/tools/osoyoos/settings group/page.yml
+++ b/src/content/general/tools/osoyoos/settings group/page.yml
@@ -1,8 +1,8 @@
 title:
-  en: Osoyoos Launcher
-img: Osoyoos.png
+  en: Osoyoos Launcher - Settings
+img: mainwindow_settings.jpg
 imgCaption:
-  en: Osoyoos with H1A-EK binaries and HEK tags
+  en: The settings found in the Osoyoos launcher
 info:
   en: >
     * [Source code and
