--- a/src/content/general/tools/osoyoos/tasks group/page.yml
+++ b/src/content/general/tools/osoyoos/tasks group/page.yml
@@ -1,8 +1,8 @@
 title:
-  en: Osoyoos Launcher - Run Programs
-img: run_programs.jpg
+  en: Osoyoos Launcher - Tasks
+img: mainwindow_tasks.jpg
 imgCaption:
-  en: The run programs section of the Osoyoos launcher.
+  en: The Tasks section of the Osoyoos launcher.
 info:
   en: >
     * [Source code and
