--- a/src/data/workflows/h3/h3-ek.yml
+++ b/src/data/workflows/h3/h3-ek.yml
@@ -7,12 +7,27 @@ H3-EK:
 H3-Tool:
   inherit: H3-EK
   page: h3-tool
+  buildTypes:
+    - tag_test
+    - tag_release
+  workflows:
+    - from: fbx-mcc
+      to:
+        - JMS
+        - Animation data
+        - ASS
 H3-Guerilla:
   inherit: H3-EK
   page: h3-guerilla
+  buildTypes:
+    - tag_test
 H3-Sapien:
   inherit: H3-EK
   page: h3-sapien
+  buildTypes:
+    - tag_test
 H3-Standalone:
   inherit: H3-EK
   page: h3-standalone
+  buildTypes:
+    - tag_test
