More mozz workflows

--- a/src/content/h1/tools/blendkrieg/page.yml
+++ b/src/content/h1/tools/blendkrieg/page.yml
@@ -1,4 +1,5 @@
 title:
   en: Blendkrieg
-stub: true
 toolName: Blendkrieg
+info: |
+  * [Source code](https://github.com/Sigmmma/Blendkrieg/tree/anim-bones)
