--- a/src/content/h1/engine/scripting/page.yml
+++ b/src/content/h1/engine/scripting/page.yml
@@ -15,3 +15,4 @@ thanks:
     en: Additional script information (limits, types, functionality, etc...)
   Ifafudafi:
     en: Script limits information
+workflowName: h1/hsc
