--- a/src/data/workflows/general/reclaimer.yml
+++ b/src/data/workflows/general/reclaimer.yml
@@ -2,3 +2,14 @@ Reclaimer:
   page: reclaimer
   authors:
     - Gravemind2401
+  workflows:
+    - from:
+        - h1/map
+        - h2/map
+        - h3/map
+      to:
+        - JMS
+        - collada
+        - AMF
+        - obj
+        - tif
