--- a/src/content/h1/tools/bluestreak/page.yml
+++ b/src/content/h1/tools/bluestreak/page.yml
@@ -1,7 +1,13 @@
 title:
   en: Bluestreak
-stub: true
+img: biped.jpg
+imgCaption:
+  en: A biped model imported with rigging data intact
 keywords:
   en:
     - max
 toolName: Bluestreak
+info:
+  en: |
+    * Release date: 2006
+    * [Project homepage](http://ghost.halomaps.org/bluestreak/)
