--- a/src/content/h1/tools/invader/page.yml
+++ b/src/content/h1/tools/invader/page.yml
@@ -1,21 +1,12 @@
 title:
   en: Invader
-img: invader-edit-qt.png
-imgCaption:
-  en: 'Screenshot of invader-edit-qt, a replacement for [Guerilla][]'
 info:
-  en: >
+  en: |
     * [Download (Windows)](https://invader.opencarnage.net/builds/nightly/)
-
     * [Package (Arch Linux)](https://aur.archlinux.org/packages/invader-git/)
-
-    * [Development
-    thread](https://opencarnage.net/index.php?/topic/7489-invader/)
-
+    * [Development thread](https://opencarnage.net/index.php?/topic/7489-invader/)
     * [Website](https://invader.opencarnage.net/)
-
     * [Discord](https://discord.com/invite/RCX3nvw)
-stub: true
 keywords:
   en:
     - mcc
