--- a/src/data/workflows/h2/tags.yml
+++ b/src/data/workflows/h2/tags.yml
@@ -61,7 +61,7 @@ h2/dialogue:
 h2/effect:
   page: h2/tags/effect
 h2/equipment:
-  page: h2/tags/equipment
+  page: h2/tags/object/item/equipment
 h2/garbage:
   page: h2/tags/object/item/garbage
 h2/globals:
@@ -242,3 +242,130 @@ h2/weather_system:
   page: h2/tags/weather_system
 h2/wind:
   page: h2/tags/wind
+
+h2_tag_editor_base:
+  abstract: true
+  workflows:
+    - edit:
+        - h2/tags
+        - h2/ai_dialogue_globals
+        - h2/ai_mission_dialogue
+        - h2/antenna
+        - h2/biped
+        - h2/bitmap
+        - h2/breakable_surface
+        - h2/cache_file_sound
+        - h2/camera_track
+        - h2/cellular_automata
+        - h2/cellular_automata2d
+        - h2/character
+        - h2/chocolate_mountain
+        - h2/cloth
+        - h2/collision_model
+        - h2/colony
+        - h2/color_table
+        - h2/contrail
+        - h2/crate
+        - h2/creature
+        - h2/damage_effect
+        - h2/decal
+        - h2/decorator_set
+        - h2/decorators
+        - h2/detail_object_collection
+        - h2/device_control
+        - h2/device_light_fixture
+        - h2/device_machine
+        - h2/device
+        - h2/dialogue
+        - h2/effect
+        - h2/equipment
+        - h2/garbage
+        - h2/globals
+        - h2/grenade_hud_interface
+        - h2/hud_globals
+        - h2/hud_message_text
+        - h2/hud_number
+        - h2/item_collection
+        - h2/item
+        - h2/lens_flare
+        - h2/light_volume
+        - h2/light
+        - h2/liquid
+        - h2/material_effects
+        - h2/material_physics
+        - h2/meter
+        - h2/model_animation_graph
+        - h2/model
+        - h2/mouse_cursor_definition
+        - h2/multilingual_unicode_string_list
+        - h2/multiplayer_globals
+        - h2/multiplayer_scenario_description
+        - h2/multiplayer_variant_settings_interface_definition
+        - h2/new_hud_definition
+        - h2/object
+        - h2/particle_model
+        - h2/particle_physics
+        - h2/particle
+        - h2/patchy_fog
+        - h2/physics_model
+        - h2/physics
+        - h2/pixel_shader
+        - h2/planar_fog
+        - h2/point_physics
+        - h2/projectile
+        - h2/render_model
+        - h2/scenario_ai_resource
+        - h2/scenario_bipeds_resource
+        - h2/scenario_cinematics_resource
+        - h2/scenario_cluster_data_resource
+        - h2/scenario_comments_resource
+        - h2/scenario_creature_resource
+        - h2/scenario_decals_resource
+        - h2/scenario_decorators_resource
+        - h2/scenario_devices_resource
+        - h2/scenario_equipment_resource
+        - h2/scenario_hs_source_file
+        - h2/scenario_lights_resource
+        - h2/scenario_scenery_resource
+        - h2/scenario_sound_scenery_resource
+        - h2/scenario_structure_bsp
+        - h2/scenario_structure_lighting_resource
+        - h2/scenario_structure_lightmap
+        - h2/scenario_trigger_volumes_resource
+        - h2/scenario_vehicles_resource
+        - h2/scenario_weapons_resource
+        - h2/scenario
+        - h2/scenery
+        - h2/screen_effect
+        - h2/shader_light_response
+        - h2/shader_pass
+        - h2/shader_template
+        - h2/shader
+        - h2/sky
+        - h2/sound_cache_file_gestalt
+        - h2/sound_classes
+        - h2/sound_dialogue_constants
+        - h2/sound_effect_collection
+        - h2/sound_effect_template
+        - h2/sound_environment
+        - h2/sound_looping
+        - h2/sound_mix
+        - h2/sound_scenery
+        - h2/sound
+        - h2/stereo_system
+        - h2/style
+        - h2/tag_database
+        - h2/text_value_pair_definition
+        - h2/unit_hud_interface
+        - h2/unit
+        - h2/user_interface_globals_definition
+        - h2/user_interface_list_skin_definition
+        - h2/user_interface_screen_widget_definition
+        - h2/user_interface_shared_globals_definition
+        - h2/vehicle_collection
+        - h2/vehicle
+        - h2/vertex_shader
+        - h2/weapon_hud_interface
+        - h2/weapon
+        - h2/weather_system
+        - h2/wind
