Refactor YAML table macro to support arbitrary data sources

--- a/src/content/h1/tools/hek/sapien/page.yml
+++ b/src/content/h1/tools/hek/sapien/page.yml
@@ -30,3 +30,5 @@ thanks:
     en: Multi-core crash solution
   InfernoPlus:
     en: Sound gain crash solution
+  aLTis:
+    en: Relight detail object collections tip
