--- a/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-sapien/page.yml
@@ -17,7 +17,7 @@ thanks:
   General_101:
     en: Additional Sapien hotkey documentation and update for H1A.
   The Cereal Killer:
-    en: Discovering Sapien keyboard shortcuts
+    en: Discovering some Sapien keyboard shortcuts
   kirby_422:
     en: Describing baggage.txt file
   Real Fake Doors:
